--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,6 @@ dependencies {
 
 
     // ViewModel
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0-beta01'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
 
 }
